--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -1459,7 +1459,7 @@
                         city: city, gender: gender, barrier: barrier, hospital: hospital, homephone: homePhone,
                         department: department, Equipment: EquipmentArr, history: history, remarks: remarks, IsActive: IsActive, Id: Id, birthDate: Bdate, EnglishName: englishName, PatientIdentity: patientId
                     }
-                   // console.log('patient', patient)
+                    console.log('patient', patient)
                     $.ajax({
                         dataType: "json",
                         url: "WebService.asmx/setPatient",
