--- a/Road to Recovery/pages/menu.html
+++ b/Road to Recovery/pages/menu.html
@@ -45,7 +45,7 @@
 
                 <li>
                     <!--href need to be viewLog.html-->
-                    <a title="سجل النظام" style=" cursor: not-allowed;"  href="#" class="waves-effect waves-primary">
+                    <a title="سجل النظام" style=" "  href="viewLog.html" class="waves-effect waves-primary">
                         <i>
                             <img src="../../Media/יומן מערכת.png" height="25" width="25" />
                         </i>
