new thanks Page with new Api

--- a/Road to Recovery/pages/menu.html
+++ b/Road to Recovery/pages/menu.html
@@ -44,8 +44,8 @@
 
 
                 <li>
-                    <!--href need to be viewLog.html-->
-                    <a title="سجل النظام" style=" cursor: not-allowed;"  href="#" class="waves-effect waves-primary">
+
+                    <a title="سجل النظام" href="viewLog.html" class="waves-effect waves-primary">
                         <i>
                             <img src="../../Media/יומן מערכת.png" height="25" width="25" />
                         </i>
@@ -54,7 +54,7 @@
                     </a>
                 </li>
 
-  
+
                 <li>
                     <a href="reportsMain.html" class="waves-effect waves-primary">
                         <i>
@@ -64,6 +64,24 @@
                     </a>
 
                 </li>
+
+                <!-----new----->
+                <li>
+
+                    <a title="صفحة الشكر والتقدير" href="../pages/thanksPage.html" class="waves-effect waves-primary">
+                        <i>
+                            <img src="../../Media/יומן מערכת.png" height="25" width="25" />
+                        </i>
+
+                        <span>תודות</span>
+                    </a>
+                </li>
+
+                <!-----new----->
+
+
+
+
 
                 <li>
                     <a class="waves-effect waves-primary" onclick="deleteCookie()" style="margin-bottom:40%;">
