--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -3406,7 +3406,7 @@
                             },
                             { targets: 8, className: 'last-modified_td' },
                             { targets: 8, type: 'last_modifiedSort' },
-                            { targets: 9, className: 'text-left-strong' },
+                            { targets: 9, className: 'text-right-strong' },
                             { targets: [10], visible: false },
                             { targets: [11], orderable: false }
 
@@ -3516,7 +3516,7 @@
                             },
                             { targets: 8, className: 'last-modified_td' },
                             { targets: 8, type: 'last_modifiedSort' },
-                            { targets: 9, className: 'text-left-strong' },
+                            { targets: 9, className: 'text-right-strong' },
                             { targets: [10], visible: false },
                             { targets: [11], orderable: false }
 
@@ -4121,7 +4121,7 @@
                             },
                             { targets: 8, className: 'last-modified_td' },
                             { targets: 8, type: 'last_modifiedSort' },
-                            { targets: 9, className: 'text-left-strong' },
+                            { targets: 9, className: 'text-right-strong' },
                             { targets: [10], visible: false },
                             { targets: [11], orderable: false }
 
@@ -4231,7 +4231,7 @@
                             },
                             { targets: 8, className: 'last-modified_td' },
                             { targets: 8, type: 'last_modifiedSort' },
-                            { targets: 9, className: 'text-left-strong' },
+                            { targets: 9, className: 'text-right-strong' },
                             { targets: [10], visible: false },
                             { targets: [11], orderable: false }
 
@@ -4495,7 +4495,16 @@
             }
 
             if (patient.Age == 1) {
-                age = `<span>בגיל שנה</span>`;
+                
+                if (patient.GenderAsEnum == -1) {
+                    age = `<span>בגיל שנה</span>`;
+                }
+                else if (patient.GenderAsEnum == 0) {
+                    age = `<span>בת שנה</span>`;
+                }
+                else if (patient.GenderAsEnum == 1) {
+                    age = `<span>בן שנה</span>`;
+                }
 
             }
             if (patient.Age == 0 || patient.IsAnonymous) {
