fix before publish

--- a/Road to Recovery/pages/thanksPage.html
+++ b/Road to Recovery/pages/thanksPage.html
@@ -133,7 +133,7 @@
                 }
                 strToRender += `</div>`;
             }
-            _allNames = copyArray.join(" ");
+            _allNames = copyArray.join(", ");
             strToRender += `</div>
                 <div><button class="copyBtn" onclick="copyNamesToClipBoard()"> <i class="glyphicon glyphicon-copy"></i>
 העתקה</button></div>
