--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -4916,7 +4916,8 @@
             timeNum = parseInt(timeNum);
             let time = new Date(timeNum);
             //console.log("time,", timeNum, time.getHours(), ridePatNum)
-            let buttonsWrapper = `<div class='elementsInSameLine'>${editBtn} ${deleteBtn} ${(drivers.length > 0 && time.getHours()<=23 )? messageToCopyBtn : candidateBtn}</div>`;
+            let buttonsWrapper = `<div class='elementsInSameLine'>${editBtn} ${deleteBtn} ${(drivers.length > 0)? messageToCopyBtn : candidateBtn}</div>`;
+            //let buttonsWrapper = `<div class='elementsInSameLine'>${editBtn} ${deleteBtn} ${(drivers.length > 0 && time.getHours() <= 23) ? messageToCopyBtn : candidateBtn}</div>`;
 
             return buttonsWrapper;
         }
