--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -537,6 +537,8 @@
                         Escorts.push(Escort);
                     });
 
+
+                    Pat.DisplayName.includes('אנונימי')? isAnonymous = true : isAnonymous = false;
                     //in case of different equipment than declared for anonymous ridepat.
                     var str = "";
 
