--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -191,6 +191,7 @@
         var rideNumberForNo;
         // var secondModal = false;
         var CoordinatorForReturn;
+        ThisRide = null;
 
         let escorts_inthisRidePat = [];
         let patients_JSONArray = [];
@@ -841,6 +842,7 @@
             unityRide.AmountOfEscorts = dataobj.RidePat.Escorts.length;
             let request = { unityRide: unityRide, func: dataobj.func, numOfRide: dataobj.numberOfRides, repeatEvery: dataobj.repeatRideEvery, firstTry:true };
             //console.log('After Custom',request);
+            ThisRide = request;
             isThisAReturnDriveFunc(dataobj.RidePat);
             let dataString = JSON.stringify(request);
 
@@ -913,6 +915,8 @@
 
                                 else
                                 {
+                                    //console.log('res:', result);
+                                    ThisRide.unityRide.RidePatNum = result;
                                     showButtonsModal(isThisAReturnDrive);
 
                                 }
@@ -948,20 +952,6 @@
 
             
 
-            ///////////////////////////////////////////////////////////////////////////
-
-            //paramDic.Add("@patientName", unityRide.PatientName);
-            //paramDic.Add("@patientId", unityRide.PatientId);
-            //paramDic.Add("@origin", unityRide.Origin);
-            //paramDic.Add("@destination", unityRide.Destination);
-            //paramDic.Add("@pickupTime", unityRide.PickupTime);
-            //paramDic.Add("@remark", unityRide.Remark);
-            //paramDic.Add("@onlyEscort", unityRide.OnlyEscort);
-            //paramDic.Add("@area", unityRide.Area);
-            //paramDic.Add("@isAnonymous", unityRide.IsAnonymous);
-            //paramDic.Add("@coorName", unityRide.CoorName);
-            //paramDic.Add("@driverName", unityRide.DriverName);
-            //paramDic.Add("@amountOfEscorts", unityRide.AmountOfEscorts);
         }
         //this is for the swal error modal if somethinggo wrong or already exist.
         const showErrorSwal = (date) => {
@@ -1673,6 +1663,7 @@
             }
             if (JSON.parse(GENERAL.RIDEPAT.getRidePatList()).length != 0) {
                 arr_customer = JSON.parse(GENERAL.RIDEPAT.getRidePatList());
+                console.log('TEST', arr_customer)
                 if (
                     performance.navigation.type == performance.navigation.TYPE_RELOAD
                     &&
@@ -1744,6 +1735,7 @@
                             });
                     }
                     else {
+                        console.log('im here ? 1738');
                         //check on בדיקה.
                         $("#afterNoon").attr('disabled', 'disabled');
                         $("#Origin").attr('disabled', 'disabled');
@@ -1850,7 +1842,80 @@
 
             return CustomObj;
         }
+        //make the flat object to complex object like the old API
+        const CustomRideObject = (thisRide) => {
 
+            let CustomObj = {};
+            CustomObj.RidePatNum = thisRide.RidePatNum;
+            CustomObj.Status = thisRide.Status;
+            CustomObj.Remark = thisRide.Remark;
+            CustomObj.OnlyEscort = thisRide.OnlyEscort;
+            CustomObj.LastModified = thisRide.LastModified;
+            CustomObj.Date = thisRide.PickupTime;
+
+            CustomObj.Pat = {};
+            CustomObj.Pat.DisplayName = thisRide.PatientName;
+            CustomObj.Pat.Id = thisRide.PatientId;
+            CustomObj.Pat.DisplayNameA = ''
+            CustomObj.Pat.EnglishName = ''
+            CustomObj.Pat.PatientIdentity = 0;
+            CustomObj.Pat.Equipment = thisRide.PatientEquipments == null ? [] : thisRide.PatientEquipments;
+            CustomObj.Pat.IsAnonymous = thisRide.IsAnonymous;
+            CustomObj.Pat.RidePatPatientStatus = {};
+            CustomObj.Pat.RidePatPatientStatus.Status = (thisRide.PatientStatus == "" || thisRide.PatientStatus == "Not Finished") ? -1 : 1;
+            CustomObj.Pat.RidePatPatientStatus.EditTimeStamp = thisRide.PatientStatusEditTime
+
+            CustomObj.Pat.EscortedList = [];
+            CustomObj.Escorts = [];
+            //for (var i = 0; i < thisRide[18].Value.length; i++) {
+            //    let oneEscort = {}
+            //    oneEscort.Id = thisRide[18].Value[i][0].Value;
+            //    oneEscort.DisplayName = thisRide[18].Value[i][1].Value;
+            //    CustomObj.Escorts.push(oneEscort);
+            //}
+            for (var i = 0; i < thisRide.AmountOfEscorts; i++) {
+                let oneEscort = {}
+                oneEscort.Id = 0
+                oneEscort.DisplayName = ''
+                CustomObj.Pat.EscortedList.push(oneEscort);
+            }
+
+            for (var i = 0; i < thisRide.AmountOfEscorts; i++) {
+                let oneEscort = {}
+                oneEscort.Id = 0
+                oneEscort.DisplayName = ''
+                CustomObj.Escorts.push(oneEscort);
+            }
+
+            CustomObj.Drivers = [];
+            let Maindriver = {};
+            Maindriver.DisplayName = thisRide.DriverName;
+            Maindriver.Id = thisRide.MainDriver;
+            Maindriver.CellPhone = thisRide.DriverCellPhone
+            CustomObj.Drivers.push(Maindriver);
+            if (Maindriver.Id == null || Maindriver.Id == -1) {
+                CustomObj.Drivers = [];
+            }
+
+            CustomObj.Destination = {};
+            CustomObj.Destination.Name = thisRide.Destination
+            CustomObj.Origin = {};
+            CustomObj.Origin.Name = thisRide.Origin;
+
+            CustomObj.Pat.Barrier = {}
+            CustomObj.Pat.Hospital = {}
+            CustomObj.Pat.Age = thisRide.PatientAge;
+            CustomObj.Pat.cellPhone = thisRide.PatientCellPhone;
+            CustomObj.Pat.GenderAsEnum = thisRide.PatientGender;
+            CustomObj.Pat.Barrier.Name = CustomObj.Destination.Name;
+            CustomObj.Pat.Hospital.Name = CustomObj.Origin.Name;
+
+            CustomObj.Coordinator = {};
+            CustomObj.Coordinator.DisplayName = thisRide.CoorName
+            CustomObj.Coordinator.Id = thisRide.CoorId
+
+            return CustomObj;
+        }
 
         //Test the New Api for load data in this page
         const Check_test_API = (ridePatNum) => {
@@ -2640,14 +2705,35 @@
             }
         }
 
-        function createNewRide() {
+       async function  createNewRide() {
 
             let ridepat = JSON.parse(GENERAL.RIDEPAT.getRidePatList());
-            ridePat = { ...ridePat, func: 'new' }
-            GENERAL.RIDEPAT.setRidePatList(JSON.stringify(ridePat));
-           
-            location.reload();
+
+            //console.log('the first obj ', ridepat);
+            //console.log('before custom', ThisRide);
+            //let customRide = CustomRideObject(ThisRide.unityRide);
+            //console.log('After custom', customRide);
+            //ridePat = customRide
+            //ridePat = { ...ridePat, func: 'new' }
+            //console.log('what im save , then reload', ridePat)
+
+            //GENERAL.RIDEPAT.setRidePatList(JSON.stringify(ridePat));
+
             $('#wait').show();
+            let patientObj = patients_JSONArray.find(p => p.DisplayName.trim() === $('#pat').val().trim());
+            if (patientObj) {
+                let targetPatient = await getPatientById(patientObj.Id);
+                request2updateData(targetPatient);
+                request2TurnOffLoader([getPatientByIdPromise]);
+            } else {
+                $('#wait').hide();
+                swal(NOT_EXIST, '', 'error');
+             }
+           $('#Modal').modal('hide');
+           $('#wait').hide();
+           $('#dateRide').val('');
+            //location.reload();
+            //$('#wait').show();
 
         }
 
